# neongarten-mods

./: .gitignore  QUICKSTART.md  README.md  flake.nix
.cursor/hooks/: dialog-prompt.nu
.cursor/rules/: honest-feedback.mdc  project-context.mdc  token-maximization-planning.mdc
.cursor/security/: ai-security  domain-lists.json  domain-manager.nu
docs/: AI_INTERACTION_STRATEGIES.md  ART_GUIDELINES.md  GAME_ANALYSIS.md  LINUX_PORT_ANALYSIS.md  PROLOGUE_ASSET_ANALYSIS.md  RNG_SYSTEM_ANALYSIS.md  SESSION_CONTEXT.md  STL_NEXT_INTEGRATION.md  TECHNICAL_RESEARCH.md  WAYLAND_INPUT_WORKAROUNDS.md
mods/linux-port/: README.md  steam_stub.gd
tools/: gdre  gdre-nixos  setup-gdsdecomp.sh
tools/godot-harness/: README.md  ai-godot-control  ai-monitor-capture  ai-monitor-config.json  asset-catalog  gdharness  godot-cmds  godot-screenshot  gshot  portal-send  samsung-capture  samsung-config.json
tools/godot-harness/editor-scripts/: export_asset_manifest.gd  find_orphaned_assets.gd  identify_prologue_assets.gd
tools/godot-harness/scripts/: analyze_assets.gd
tools/portal-input/: Cargo.toml  README.md
tools/portal-input/src/: main.rs
